<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Action Settings</string>
    <string name="app_name">DSPro</string>
    <string name="app_folder">/ihmc/</string>
    <string name="app_config_file">conf/dspro.properties</string>
    <string name="app_db_file">conf/db.sqlite</string>
    <string name="app_dspro2_log_file">log/dspro.log</string>
    <string name="app_disservice_log_file">log/disseminationservice.log</string>
    <string name="app_log4j_file">log/dsproapp.log</string>
    <string name="app_multicast_lock">conf/dspro2app_multicast_lock</string>
    <string name="app_wifi_lock">conf/dspro2app_wifi_lock</string>
    <string name="mutex_service_started">MutexLogger is running</string>
    <string name="mutex_service_stopped">MutexLogger has been stopped</string>
    <string name="mutex_raw_file">mutex.raw</string>
    <string name="mutex_log_file">mutex.log</string>
    <string name="log_level">LogLevel</string>
    <string name="local_service_started">DSPro is running</string>
    <string name="local_service_stopped">DSPro has been stopped</string>
    <string name="dspro2_notification_message">DSPro is running</string>
    <string name="dspro2_notification_title">DSPro</string>
    <string name="disservice_notification_message">DisService is running</string>
    <string name="disservice_notification_title">DisService</string>
    <string name="mutex_notification_message">MutexLogger is running</string>
    <string name="mutex_notification_title">MutexLogger</string>
    <string name="transport_disservice">DisService</string>
    <string name="transport_mockets">Mockets</string>
    <string name="transport_tcp">TCP</string>
    <string name="settings">Settings</string>
    <string name="peers">Peers</string>
    <string name="monitor">Monitor</string>
    <string name="notification_channel_dspro">us.ihmc.android.aci.dspro.NOTIFICATION_CHANNEL</string>
    <string name="intent_build_version">us.ihmc.android.aci.dspro.BUILD_VERSION</string>
    <string name="intent_sender">us.ihmc.android.aci.dspro.SENDER</string>
    <string name="intent_service_action">us.ihmc.android.aci.dspro.SERVICE_ACTION</string>
    <string name="intent_session_key">us.ihmc.android.aci.dspro.SESSION_KEY</string>
    <string name="intent_start_service">us.ihmc.android.aci.dspro.START_SERVICE</string>
    <string name="intent_start_service_background">us.ihmc.android.aci.dspro.START_SERVICE_BACKGROUND</string>
    <string name="intent_restart_service">us.ihmc.android.aci.dspro.RESTART_SERVICE</string>
    <string name="intent_stop_service">us.ihmc.android.aci.dspro.STOP_SERVICE</string>
    <string name="intent_service_started">us.ihmc.android.aci.dspro.SERVICE_STARTED</string>
    <string name="intent_service_stopped">us.ihmc.android.aci.dspro.SERVICE_STOPPED</string>
    <string name="intent_service_error">us.ihmc.android.aci.dspro.SERVICE_ERROR</string>
    <string name="monitor_name">DSPro Monitor</string>
    <string name="messagesPushed">Messages Pushed:&#160;</string>
    <string name="bytesPushed">Bytes Pushed:&#160;</string>
    <string name="fragmentsPushed">Fragments Pushed:&#160;</string>
    <string name="fragmentBytesPushed">Fragment Bytes Pushed:&#160;</string>
    <string name="odFragmentsSent">O-D Fragments Sent:&#160;</string>
    <string name="odFragmentBytesSent">O-D Fragment Bytes Sent:&#160;</string>
    <string name="messagesReceived">Messages Received:&#160;</string>
    <string name="bytesReceived">Bytes Received:&#160;</string>
    <string name="fragmentsReceived">Fragments Received:&#160;</string>
    <string name="fragmentBytesReceived">Fragment Bytes Received:&#160;</string>
    <string name="kamMessages">Keep Alive Messages</string>
    <string name="kamSent">Sent:&#160;</string>
    <string name="kamReceived">Received:&#160;</string>
    <string name="mfr">Missing Fragment Requests</string>
    <string name="mfrsSent">MFRs Sent:&#160;</string>
    <string name="mfrsBytesSent">MFRs Bytes Sent:&#160;</string>
    <string name="mfrsReceived">MFRs Received:&#160;</string>
    <string name="mfrsBytesReceived">MFRs Bytes Received:&#160;</string>
    <string name="dt">Duplicate Traffic</string>
    <string name="dtRecNoTarget">DT Received (no target):&#160;</string>
    <string name="dtRecTargetNode">DT Received (targeted to node):&#160;</string>
    <string name="peerId">Peer Id</string>
    <string name="pref_main_title">Main</string>
    <string name="pref_main_key">pref_key_main_settings</string>
    <string name="aci.dspro.sessionKey">aci.dspro.sessionKey</string>
    <string name="aci.dspro.sessionKey_title_on">Session Key On</string>
    <string name="aci.dspro.sessionKey_title_off">Session Key Off</string>
    <string name="aci.dspro.sessionKey_title_hint">Set a session key</string>
    <string name="aci.dspro2app.selectMode">aci.dspro2app.selectMode</string>
    <string name="aci.dspro2app.selectMode_default">DSPro</string>
    <string name="aci.dspro2app.selectMode_title">Session mode:</string>
    <string-array name="pref_select_mode_array_entries">
        <item>DSPro</item>
        <item>DisService</item>
    </string-array>
    <string name="aci.dspro2app.selectInterface_title">Network interface:</string>
    <string name="aci.disService.nodeUUID">aci.disService.nodeUUID</string>
    <string name="aci.disService.nodeUUID_title">Node UUID</string>
    <string name="aci.disService.nodeUUID_default">AndroidDevice</string>
    <string name="aci.dspro2app.WiFiIFs">aci.dspro2app.WiFiIFs</string>
    <string name="aci.dspro2app.WiFiIFs_title">Detected Wi-Fi interface</string>
    <string name="aci.disService.netIFs">aci.disService.netIFs</string>
    <string name="aci.dspro2app.extraNetIFs.enable">aci.dspro2app.extraNetIFs.enable</string>
    <string name="aci.dspro2app.extraNetIFs.enable_title">Manual configuration</string>
    <string name="aci.dspro2app.extraNetIFs.enable_summary">\';\' separated interfaces</string>
    <string name="aci.dspro2app.extraNetIFs.enable_default">false</string>
    <string name="aci.dspro2app.extraNetIFs">aci.dspro2app.extraNetIFs</string>
    <string name="aci.dspro2app.extraNetIFs_title">Network interfaces</string>
    <string name="aci.dspro2app.extraNetIFs_default"></string>
    <string name="pref_transport_title">Transport</string>
    <string name="pref_transport_key">pref_key_transport_settings</string>
    <string name="aci.dspro.adaptor.disservice.enable">aci.dspro.adaptor.disservice.enable</string>
    <string name="aci.dspro.adaptor.disservice.enable_title">DisService</string>
    <string name="aci.dspro.adaptor.disservice.enable_summary">Use DisService as transport</string>
    <string name="aci.dspro.adaptor.disservice.enable_default">true</string>
    <string name="aci.disService.networkMessageService.port">aci.disService.networkMessageService.port</string>
    <string name="aci.disService.networkMessageService.port_title">DisService port</string>
    <string name="aci.disService.networkMessageService.port_default">6669</string>
    <string name="aci.disService.networkMessageService.mcastTTL">aci.disService.networkMessageService.mcastTTL</string>
    <string name="aci.disService.networkMessageService.mcastTTL_title">DisService Multicast TTL</string>
    <string name="aci.disService.networkMessageService.mcastTTL_default">32</string>
    <string name="aci.disService.nodeConfiguration.bandwidth">aci.disService.nodeConfiguration.bandwidth</string>
    <string name="aci.disService.nodeConfiguration.bandwidth_title">DisService Bandwidth</string>
    <string name="aci.disService.nodeConfiguration.bandwidth_default">2048</string>
    <string name="aci.dspro.adaptor.mockets.enable">aci.dspro.adaptor.mockets.enable</string>
    <string name="aci.dspro.adaptor.mockets.enable_title">Mockets</string>
    <string name="aci.dspro.adaptor.mockets.enable_summary">Use Mockets as transport</string>
    <string name="aci.dspro.adaptor.mockets.enable_default">false</string>
    <string name="aci.dspro.adaptor.mockets.port">aci.dspro.adaptor.mockets.port</string>
    <string name="aci.dspro.adaptor.mockets.port_title">Mockets port</string>
    <string name="aci.dspro.adaptor.mockets.port_default">9999</string>
    <string name="aci.dspro.adaptor.mockets.peer.addr">aci.dspro.adaptor.mockets.peer.addr</string>
    <string name="aci.dspro.adaptor.mockets.peer.addr_title">Mockets peer address</string>
    <string name="aci.dspro.adaptor.mockets.peer.addr_default"></string>
    <string name="aci.dspro.adaptor.tcp.enable">aci.dspro.adaptor.tcp.enable</string>
    <string name="aci.dspro.adaptor.tcp.enable_title">TCP</string>
    <string name="aci.dspro.adaptor.tcp.enable_summary">Use TCP as transport</string>
    <string name="aci.dspro.adaptor.tcp.enable_default">false</string>
    <string name="aci.dspro.adaptor.tcp.port">aci.dspro.adaptor.tcp.port</string>
    <string name="aci.dspro.adaptor.tcp.port_title">TCP port</string>
    <string name="aci.dspro.adaptor.tcp.port_default">8888</string>
    <string name="aci.dspro.adaptor.tcp.peer.addr">aci.dspro.adaptor.tcp.peer.addr</string>
    <string name="aci.dspro.adaptor.tcp.peer.addr_title">TCP peer address</string>
    <string name="aci.dspro.adaptor.tcp.peer.addr_default"></string>
    <string name="aci.disService.networkMessageService.passphrase.encryption">aci.disService.networkMessageService.passphrase.encryption</string>
    <string name="aci.disService.networkMessageService.passphrase.encryption_title">Passphrase Encryption</string>
    <string name="aci.disService.networkMessageService.passphrase.encryption_default">true</string>
    <string name="aci.disService.networkMessageService.authenticator.encryption">aci.disService.networkMessageService.authenticator.encryption</string>
    <string name="aci.disService.networkMessageService.authenticator.encryption_title">Authenticator Encryption</string>
    <string name="aci.disService.networkMessageService.authenticator.encryption_default">false</string>
    <string name="aci.disService.networkMessageService.groupKeyFile">aci.disService.networkMessageService.groupKeyFile</string>
    <string name="aci.disService.networkMessageService.groupKeyFile_title">Group Key File</string>
    <string name="aci.disService.networkMessageService.groupKeyFile_default">/sdcard/ihmc/conf/groupKey</string>
    <string name="aci.disService.networkMessageService.encryption.enable">aci.disService.networkMessageService.encryption.enable</string>
    <string name="aci.disService.networkMessageService.encryption.enable_title">Encryption</string>
    <string name="aci.disService.networkMessageService.encryption.enable_default">false</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_key">pref_key_storage_settings</string>
    <string name="aci.disService.storageMode">aci.disService.storageMode</string>
    <string name="aci.disService.storageMode_title">Storage mode</string>
    <string name="aci.disService.storageMode_dialog">Where DSPro2 stores data</string>
    <string name="aci.disService.storageMode_default">1</string>
    <string name="aci.disService.storageMode_default_summary">On file</string>
    <string name="aci.dspro2app.deleteStorageOnExit">aci.dspro2app.deleteStorageOnExit</string>
    <string name="aci.dspro2app.deleteStorageOnExit_title">Clean exit</string>
    <string name="aci.dspro2app.deleteStorageOnExit_summary">Delete storage file on exit</string>
    <string name="aci.dspro2app.deleteStorageOnExit_default">false</string>
    <string-array name="pref_storage_mode_array_entries">
        <item>On memory</item>
        <item>On file</item>
    </string-array>
    <string-array name="pref_storage_mode_array_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="aci.disService.storageFile">aci.disService.storageFile</string>
</resources>