<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textMessagesPushed"
                    style="@style/Text.Header.Monitor"
                    android:text="@string/messagesPushed" />

                <TextView
                    android:id="@+id/textBytesPushed"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@id/textMessagesPushed"
                    android:text="@string/bytesPushed" />

                <TextView
                    android:id="@+id/textFragmentsPushed"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textBytesPushed"
                    android:text="@string/fragmentsPushed" />

                <TextView
                    android:id="@+id/textFragmentBytesPushed"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textFragmentsPushed"
                    android:text="@string/fragmentBytesPushed" />

                <TextView
                    android:id="@+id/textOdFragmentsSent"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textFragmentBytesPushed"
                    android:text="@string/odFragmentsSent" />

                <TextView
                    android:id="@+id/textOdFragmentBytesSent"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textOdFragmentsSent"
                    android:text="@string/odFragmentBytesSent" />

                <TextView
                    android:id="@+id/textMessagesReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textOdFragmentBytesSent"
                    android:linksClickable="true"
                    android:text="@string/messagesReceived" />

                <TextView
                    android:id="@+id/textBytesReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textMessagesReceived"
                    android:text="@string/bytesReceived" />

                <TextView
                    android:id="@+id/textFragmentsReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textBytesReceived"
                    android:text="@string/fragmentsReceived" />

                <TextView
                    android:id="@+id/textFragmentBytesReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textFragmentsReceived"
                    android:text="@string/fragmentBytesReceived" />

                <TextView
                    android:id="@+id/messagesPushed"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textMessagesPushed"
                    android:layout_toRightOf="@+id/textMessagesPushed" />

                <TextView
                    android:id="@+id/bytesPushed"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textBytesPushed"
                    android:layout_toRightOf="@+id/textBytesPushed" />

                <TextView
                    android:id="@+id/fragmentsPushed"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textFragmentsPushed"
                    android:layout_toRightOf="@+id/textFragmentsPushed" />

                <TextView
                    android:id="@+id/fragmentBytesPushed"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textFragmentBytesPushed"
                    android:layout_toRightOf="@+id/textFragmentBytesPushed" />

                <TextView
                    android:id="@+id/odFragmentsSent"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textOdFragmentsSent"
                    android:layout_toRightOf="@+id/textOdFragmentsSent" />

                <TextView
                    android:id="@+id/odFragmentBytesSent"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textOdFragmentBytesSent"
                    android:layout_toRightOf="@+id/textOdFragmentBytesSent" />

                <TextView
                    android:id="@+id/messagesReceived"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textMessagesReceived"
                    android:layout_toRightOf="@+id/textMessagesReceived" />

                <TextView
                    android:id="@+id/bytesReceived"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textBytesReceived"
                    android:layout_toRightOf="@+id/textBytesReceived" />

                <TextView
                    android:id="@+id/fragmentsReceived"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textFragmentsReceived"
                    android:layout_toRightOf="@+id/textFragmentsReceived" />

                <TextView
                    android:id="@+id/fragmentBytesReceived"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textFragmentBytesReceived"
                    android:layout_toRightOf="@+id/textFragmentBytesReceived" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textKamMessages"
                    style="@style/Text.MonitorTitle"
                    android:text="@string/kamMessages"
                    android:textColor="@android:color/holo_green_light"
                    android:layout_marginTop="0dp"/>

                <TextView
                    android:id="@+id/textKamSent"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@id/textKamMessages"
                    android:layout_marginLeft="10dp"
                    android:text="@string/kamSent" />

                <TextView
                    android:id="@+id/kamSent"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textKamSent"
                    android:layout_toRightOf="@+id/textKamSent" />

                <TextView
                    android:id="@+id/textKamReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@id/textKamSent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/kamReceived" />

                <TextView
                    android:id="@+id/kamReceived"
                    style="@style/Text.MonitorValue"
                    android:layout_alignTop="@+id/textKamReceived"
                    android:layout_toRightOf="@+id/textKamReceived" />

                <TextView
                    android:id="@+id/textMfr"
                    style="@style/Text.MonitorTitle"
                    android:layout_below="@+id/textKamReceived"
                    android:text="@string/mfr"
                    android:textColor="@android:color/holo_red_light"/>

                <TextView
                    android:id="@+id/textMfrsSent"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@id/textMfr"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mfrsSent"/>

                <TextView
                    android:id="@+id/mfrsSent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textMfrsSent"
                    android:layout_toRightOf="@+id/textMfrsSent"
                    android:text="0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textMfrsBytesSent"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textMfrsSent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mfrsBytesSent" />

                <TextView
                    android:id="@+id/mfrsBytesSent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textMfrsBytesSent"
                    android:layout_toRightOf="@+id/textMfrsBytesSent"
                    android:text="0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textMfrsReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textMfrsBytesSent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mfrsReceived" />

                <TextView
                    android:id="@+id/mfrsReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textMfrsReceived"
                    android:layout_toRightOf="@+id/textMfrsReceived"
                    android:text="0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textMfrsBytesReceived"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textMfrsReceived"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mfrsBytesReceived"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/mfrsBytesReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textMfrsBytesReceived"
                    android:layout_toRightOf="@+id/textMfrsBytesReceived"
                    android:text="0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textDt"
                    style="@style/Text.MonitorTitle"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/dt"
                    android:layout_below="@+id/textMfrsBytesReceived" />

                <TextView
                    android:id="@+id/textDtRecNoTarget"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textDt"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dtRecNoTarget" />

                <TextView
                    android:id="@+id/dtRecNoTarget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textDtRecNoTarget"
                    android:layout_toRightOf="@+id/textDtRecNoTarget"
                    android:text="0"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textDtRecTargetNode"
                    style="@style/Text.Header.Monitor"
                    android:layout_below="@+id/textDtRecNoTarget"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dtRecTargetNode" />

                <TextView
                    android:id="@+id/dtRecTargetNode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textDtRecTargetNode"
                    android:layout_toRightOf="@+id/textDtRecTargetNode"
                    android:text="0"
                    android:textSize="18dp" />

            </RelativeLayout>

            <fragment
                android:id="@+id/monitor_fragment"
                android:name="us.ihmc.android.aci.dspro.monitor.MonitorFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDisServiceMon"/>

        </FrameLayout>

    </LinearLayout>

</TabHost>